# adventofcode

./: .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  README.md  add_day
.day_template/: Cargo.toml  README.md
.github/workflows/: build.yaml
2020/01_report-repair/: Cargo.toml  README.md
2020/01_report-repair/src/: main.rs
2020/02_password-philosophy/: Cargo.toml  README.md
2020/02_password-philosophy/src/: main.rs
2020/03_toboggan-trajectory/: Cargo.toml  README.md
2020/03_toboggan-trajectory/src/: main.rs
2020/04_passport-processing/: Cargo.toml  README.md
2020/04_passport-processing/src/: main.rs
2020/05_binary-boarding/: Cargo.toml  README.md
2020/05_binary-boarding/src/: main.rs
2020/06_custom-customs/: Cargo.toml  README.md
2020/06_custom-customs/src/: main.rs
2020/07_handy-haversacks/: Cargo.toml  README.md
2020/07_handy-haversacks/src/: main.rs
2020/08_handheld-halting/: Cargo.toml  README.md
2020/08_handheld-halting/src/: main.rs
2020/09_encoding-error/: Cargo.toml  README.md
2020/09_encoding-error/src/: main.rs
2020/10_adapter-array/: Cargo.toml  README.md
2020/10_adapter-array/src/: main.rs
2020/11_seating-system/: Cargo.toml  README.md
2020/11_seating-system/src/: main.rs
2020/12_rain-risk/: Cargo.toml  README.md
2020/12_rain-risk/src/: main.rs
2020/13_shuttle-search/: Cargo.toml  README.md
2020/13_shuttle-search/src/: main.rs
2020/14_docking-data/: Cargo.toml  README.md
2020/14_docking-data/src/: main.rs
2020/15_rambunctious-recitation/: Cargo.toml  README.md
2020/15_rambunctious-recitation/src/: main.rs
2020/16_ticket-translation/: Cargo.toml  README.md
2020/16_ticket-translation/src/: main.rs
2020/17_conway-cubes/: Cargo.toml  README.md
2020/17_conway-cubes/src/: main.rs
2020/18_operation-order/: Cargo.toml  README.md
2020/18_operation-order/src/: main.rs
2020/19_monster-messages/: Cargo.toml  README.md
2020/19_monster-messages/src/: main.rs
2020/20_jurassic-jigsaw/: Cargo.toml  README.md
2020/20_jurassic-jigsaw/src/: main.rs
2020/21_allergen-assessment/: Cargo.toml  README.md
2020/21_allergen-assessment/src/: main.rs
2020/22_crab-combat/: Cargo.toml  README.md
2020/22_crab-combat/src/: main.rs
2020/23_crab-cups/: Cargo.toml  README.md
2020/23_crab-cups/src/: main.rs
2020/24_lobby-layout/: Cargo.toml  README.md
2020/24_lobby-layout/src/: main.rs
2020/25_combo-breaker/: Cargo.toml  README.md
2020/25_combo-breaker/src/: main.rs
2021/01_sonar-sweep/: Cargo.toml  README.md
2021/01_sonar-sweep/src/: main.rs
2021/02_dive/: Cargo.toml  README.md
2021/02_dive/src/: main.rs
2021/03_binary-diagnostic/: Cargo.toml  README.md
2021/03_binary-diagnostic/src/: main.rs
2021/04_giant-squid/: Cargo.toml  README.md
2021/04_giant-squid/src/: main.rs
2021/05_hydrothermal-venture/: Cargo.toml  README.md
2021/05_hydrothermal-venture/src/: main.rs
2021/06_lanternfish/: Cargo.toml  README.md
2021/06_lanternfish/src/: main.rs
2021/07_the-treachery-of-whales/: Cargo.toml  README.md
2021/07_the-treachery-of-whales/src/: main.rs
2021/08_seven-segment-search/: Cargo.toml  README.md
2021/08_seven-segment-search/src/: main.rs
2021/09_smoke-basin/: Cargo.toml  README.md
2021/09_smoke-basin/src/: main.rs
2021/10_syntax-scoring/: Cargo.toml  README.md
2021/10_syntax-scoring/src/: main.rs
2021/11_dumbo-octopus/: Cargo.toml  README.md
2021/11_dumbo-octopus/src/: main.rs
2021/12_passage-pathing/: Cargo.toml  README.md
2021/12_passage-pathing/src/: main.rs
2021/13_transparent-origami/: Cargo.toml  README.md
2021/13_transparent-origami/src/: main.rs
2021/14_extended-polymerization/: Cargo.toml  README.md
2021/14_extended-polymerization/src/: main.rs
2021/15_chiton/: Cargo.toml  README.md
2021/15_chiton/src/: main.rs
2021/16_packet-decoder/: Cargo.toml  README.md
2021/16_packet-decoder/src/: main.rs
2021/17_trick-shot/: Cargo.toml  README.md
2021/17_trick-shot/src/: main.rs
2021/18_snailfish/: Cargo.toml  README.md
2021/18_snailfish/src/: binary_tree.rs  main.rs
2021/19_beacon-scanner/: Cargo.toml  README.md
2021/19_beacon-scanner/src/: main.rs
2021/20_trench-map/: Cargo.toml  README.md
2021/20_trench-map/src/: main.rs
2021/21_dirac-dice/: Cargo.toml  README.md
2021/21_dirac-dice/src/: main.rs
2021/22_reactor-reboot/: Cargo.toml  README.md
2021/23_amphipod/: Cargo.toml  README.md
2021/24_arithmetic-logic-unit/: Cargo.toml  README.md
2021/25_sea-cucumber/: Cargo.toml  README.md
2021/25_sea-cucumber/src/: main.rs
2022/01_calorie-counting/: Cargo.toml  README.md
2022/01_calorie-counting/src/: main.rs
2022/02_rock-paper-scissors/: Cargo.toml  README.md
2022/02_rock-paper-scissors/src/: main.rs
2022/03_rucksack-reorganization/: Cargo.toml  README.md
2022/04_camp-cleanup/: Cargo.toml  README.md
2022/05_supply-stacks/: Cargo.toml  README.md
2022/06_tuning-trouble/: Cargo.toml  README.md
2022/07_no-space-left-on-device/: Cargo.toml  README.md
2022/08_treetop-tree-house/: Cargo.toml  README.md
2022/09_rope-bridge/: Cargo.toml  README.md
2022/10_cathode-ray-tube/: Cargo.toml  README.md
2022/11_monkey-in-the-middle/: Cargo.toml  README.md
2022/12_hill-climbing-algorithm/: Cargo.toml  README.md
2022/12_hill-climbing-algorithm/src/: main.rs
2022/13_distress-signal/: Cargo.toml  README.md  input.txt
helpers/: Cargo.toml
helpers/src/: lib.rs
(+9 files in other folders)
