[workspace]

members = [
    "helpers",
    "2020/01_report-repair",
    "2020/02_password-philosophy",
    "2020/03_toboggan-trajectory",
    "2020/04_passport-processing",
    "2020/05_binary-boarding",
    "2020/06_custom-customs",
    "2020/07_handy-haversacks",
    "2020/08_handheld-halting",
    "2020/09_encoding-error",
    "2020/10_adapter-array",
    "2020/11_seating-system",
    "2020/12_rain-risk",
    "2020/13_shuttle-search",
    "2020/14_docking-data",
    "2020/15_rambunctious-recitation",
    "2020/16_ticket-translation",
    "2020/17_conway-cubes",
    "2020/18_operation-order",
    "2020/19_monster-messages",
    "2020/20_jurassic-jigsaw",
    "2020/21_allergen-assessment",
    "2020/22_crab-combat",
    "2020/23_crab-cups",
    "2020/24_lobby-layout",
    "2020/25_combo-breaker",
    "2021/01_sonar-sweep",
    "2021/02_dive",
    "2021/03_binary-diagnostic",
    "2021/04_giant-squid",
    "2021/05_hydrothermal-venture",
    "2021/06_lanternfish",
    "2021/07_the-treachery-of-whales",
    "2021/08_seven-segment-search",
    "2021/09_smoke-basin",
    "2021/10_syntax-scoring",
    "2021/11_dumbo-octopus",
    "2021/12_passage-pathing",
    "2021/13_transparent-origami",
    "2021/14_extended-polymerization",
    "2021/15_chiton",
    "2021/16_packet-decoder",
    "2021/17_trick-shot",
    "2021/18_snailfish",
    "2021/19_beacon-scanner",
    "2021/20_trench-map",
    "2021/21_dirac-dice",
    "2021/22_reactor-reboot",
    "2021/23_amphipod",
    "2021/24_arithmetic-logic-unit",
    "2021/25_sea-cucumber",
    "2022/01_calorie-counting",
    "2022/02_rock-paper-scissors",
    "2022/03_rucksack-reorganization",
    "2022/04_camp-cleanup",
    "2022/05_supply-stacks",
    "2022/06_tuning-trouble",
    "2022/07_no-space-left-on-device",
    "2022/08_treetop-tree-house",
    "2022/09_rope-bridge",
    # ADD HERE THE NEW DAY
]
