[package]
name = "advent_of_code-2021-16-packet-decoder"
version = "0.1.0"
authors = ["Samuele Maci <macisamuele@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
bitvec = "*"
helpers = {path = "../../helpers"}
itertools = "*"
