[package]
name = "advent_of_code-2021-22-reactor-reboot"
version = "0.1.0"
authors = ["Samuele Maci <macisamuele@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
helpers = {path = "../../helpers"}
